Solved Font not showing Issue

--- a/components/about.module.css
+++ b/components/about.module.css
@@ -284,7 +284,7 @@
 
     .mus h4 {
         font-size: 20px;
-        font-family: "casino";
+        font-family: 'Casino Flat';
         color: #cca354;
         margin-bottom: 10px;
         margin-top: 0;
@@ -336,7 +336,7 @@
     .partnership h4,
     .collaboration h4 {
         font-size: 25px;
-        font-family: "Casino";
+        font-family: 'Casino Flat';
         color: #cca354;
         margin: 0;
         text-align: center;
