--- a/components/banner.module.css
+++ b/components/banner.module.css
@@ -99,7 +99,7 @@
     border: 2px solid #cca354;
     color: whitesmoke;
     font-size: 1.2rem;
-    font-family: "Casino";
+    font-family: "Casino Flat";
 }
 
 .joinPresale:hover {
@@ -164,7 +164,7 @@
         background-origin: border-box;
     }
     .col2 {
-      margin-top: 100px ;
+      margin-top: 80px ;
     }
 
     .metasinoLogo {
@@ -182,7 +182,7 @@
     .metasinoTxt {
         width: 300px;
         margin-top: 0px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         padding: 0;
     }
 
